// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render panelHeader 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          Object {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with subtitle 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 36,
                  "lineHeight": 48,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with title 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#444B5A",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 48,
                  "lineHeight": 60,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader without props 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;
